edit and contact page

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 					<li> / </li>
 					<li class="selectedNav">ABOUT</li>
 					<li> / </li>
-					<li> <a href="contact.html">CONTACT</a></li>
+					<li> <a href="contact.php">CONTACT</a></li>
 					<li> / </li>
 					<li> <a href="blog.html">BLOG</a></li>
 				</ul>
@@ -71,13 +71,16 @@ Twitter @GossipGlamour and LIKE us on Facebook
 			</div>
 			<div style="clear:both;"></div>
 			<div class="bottomNav">
-				<ul>
+				<ul style="z-index: 999;">
 					<li><a href="index.html">HOME</a> /</li>
 					<li> <a href="services.html">SERVICES</a> /</li>
 					<li> ABOUT /</li>
-					<li> <a href="contact.html">CONTACT</a> /</li>
+					<li> <a href="contact.php">CONTACT</a> /</li>
 					<li> <a href="blog.html">BLOG</a></li>
 				</ul>
+				<ul style="margin-top: -36px; padding-top: 15px; padding-bottom: 15px;">
+				</ul>
+				<br/><br/>
 			</div>
 		</div>
 		</div>
