--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
 					<li> / </li>
 					<li><a href="about.html">ABOUT</a></li>
 					<li> / </li>
-					<li> <a href="contact.html">CONTACT</a></li>
+					<li> <a href="contact.php">CONTACT</a></li>
 					<li> / </li>
 					<li> <a href="blog.html">BLOG</a></li>
 				</ul>
@@ -37,7 +37,7 @@
 			</div>
 			<div class="servicesContent" style="padding-bottom: 15px; border-bottom: 1px solid #EEE;">
 				<div class="profilePic">
-					<div class="floatTxt">
+					<div class="floatTxt" id="selected">
 						Retail
 					</div>
 					<div class="floatTxt">
@@ -54,55 +54,57 @@
 					</div>
 				</div>
 				<div style="float: right; width: 600px;">
-					<h1>RETAIL</h1>	
-					<h2>PROMOTIONS</h2>
-					<p>
-						Creating an effective promotional campaign that will resonate with your target market 
-and generate a positive buzz for your store is not an easy task. Let Gossip & Glamour 
-help you generate promotional strategies for your business including exclusive Pop-Shops, 
-Social Media exclusives, Client Loyalty programs, Daily Deals and more.
-					</p>
-					<h2>RETAIL COPYRIGHTING</h2>
-					<p>
-						Gossip & Glamour can help you find the right words to sell your products. 
-We specialize in copyrighting for marketing materials, product descriptions, 
-website verbiage, customer newsletters and more.
-					</p>
-					<h2>EMAIL MARKETING</h2>
-					<p>
-						Constant Contact newsletters continue to be an effective way to get clients engaged in 
-what’s happening at your store. Let us help you design a custom newsletter for your 
-clients and develop incentives and strategies to get clients to sign up. Gossip & Glamour 
-can also help create a content calendar for your business.
-					</p>
-					<h2>LOOK BOOKS</h2>
-					<p>
-						Creatively designed look books can help to visually showcase your store to customers. 
-We can help you organize photo shoots that reinforce your branding and help construct 
-digital look-books that effectively display seasonal key looks at your store. Or- we can 
-help you create virtual look books using photos you already own.
-					</p>
-					<h2>FLOOR SETS/VISUAL MERCHANDISING</h2>
-					<p>
-						Whether it’s a seasonal floor set or visual displays designed to showcase new product, 
-Gossip & Glamour can help you creatively design visual displays to sell your product and 
-enhance your selling space. If you need an extra pair of hands to execute a floor move 
-or need help with design and direction, we can help you get the job done.
-					</p>
-					<h2>SPECIAL EVENTS</h2>
-					<p>
-						Gossip & Glamour can help your business host special events including fashion shows, 
-trunk shows, in-store parties and more. We have a wealth of experience 
-(and industry connections) to make your next event a success!
-					</p>
-					<h2>TRAINING WORKSHOPS</h2>
-					<p>
-						The ability to sell product is the key to successful retailing. It's what sets apart companies 
-that succeed and companies that fail. Gossip & Glamour can help train your sales force to 
-close sales and develop lasting relationships with clients in 1-hour salesmanship workshop. 
-We can also conduct seminars on personnel development, management training, niche 
-marketing, and vendor relations.
-					</p>
+					<div id="retail">
+						<h1>RETAIL</h1>	
+						<h2>PROMOTIONS</h2>
+						<p>
+							Creating an effective promotional campaign that will resonate with your target market 
+						and generate a positive buzz for your store is not an easy task. Let Gossip & Glamour 
+						help you generate promotional strategies for your business including exclusive Pop-Shops, 
+						Social Media exclusives, Client Loyalty programs, Daily Deals and more.
+						</p>
+						<h2>RETAIL COPYRIGHTING</h2>
+						<p>
+							Gossip & Glamour can help you find the right words to sell your products. 
+						We specialize in copyrighting for marketing materials, product descriptions, 
+						website verbiage, customer newsletters and more.
+						</p>
+						<h2>EMAIL MARKETING</h2>
+						<p>
+							Constant Contact newsletters continue to be an effective way to get clients engaged in 
+						what’s happening at your store. Let us help you design a custom newsletter for your 
+						clients and develop incentives and strategies to get clients to sign up. Gossip & Glamour 
+						can also help create a content calendar for your business.
+						</p>
+						<h2>LOOK BOOKS</h2>
+						<p>
+							Creatively designed look books can help to visually showcase your store to customers. 
+						We can help you organize photo shoots that reinforce your branding and help construct 
+						digital look-books that effectively display seasonal key looks at your store. Or- we can 
+						help you create virtual look books using photos you already own.
+						</p>
+						<h2>FLOOR SETS/VISUAL MERCHANDISING</h2>
+						<p>
+							Whether it’s a seasonal floor set or visual displays designed to showcase new product, 
+						Gossip & Glamour can help you creatively design visual displays to sell your product and 
+						enhance your selling space. If you need an extra pair of hands to execute a floor move 
+						or need help with design and direction, we can help you get the job done.
+						</p>
+						<h2>SPECIAL EVENTS</h2>
+						<p>
+							Gossip & Glamour can help your business host special events including fashion shows, 
+						trunk shows, in-store parties and more. We have a wealth of experience 
+						(and industry connections) to make your next event a success!
+						</p>
+						<h2>TRAINING WORKSHOPS</h2>
+						<p>
+							The ability to sell product is the key to successful retailing. It's what sets apart companies 
+						that succeed and companies that fail. Gossip & Glamour can help train your sales force to 
+						close sales and develop lasting relationships with clients in 1-hour salesmanship workshop. 
+						We can also conduct seminars on personnel development, management training, niche 
+						marketing, and vendor relations.
+						</p>
+					</div>
 					<div style="border-bottom: 1px solid #EEE;"></div>
 					<p style="margin-top: 10px;">
 					*Pricing is project-based and also available on an hourly basis. <br/>
@@ -113,13 +115,16 @@ marketing, and vendor relations.
 			</div>
 			<div style="clear:both;"></div>
 			<div class="bottomNav">
-				<ul>
+				<ul style="z-index: 999;">
 					<li><a href="index.html">HOME</a> /</li>
 					<li> SERVICES /</li>
 					<li> <a href="about.html">ABOUT</a> /</li>
-					<li> <a href="contact.html">CONTACT</a> /</li>
+					<li> <a href="contact.php">CONTACT</a> /</li>
 					<li> <a href="blog.html">BLOG</a></li>
 				</ul>
+				<ul style="margin-top: -36px; padding-top: 15px; padding-bottom: 15px;">
+				</ul>
+				<br/><br/>
 			</div>
 		</div>
 		</div>
