--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
 					<li> / </li>
 					<li><a href="about.html">ABOUT</a></li>
 					<li> / </li>
-					<li> <a href="contact.html">CONTACT</a></li>
+					<li> <a href="contact.php">CONTACT</a></li>
 					<li> / </li>
 					<li class="selectedNav">BLOG</li>
 				</ul>
@@ -43,17 +43,26 @@
 			<div class="welcome">
 				<h2>CONNECT</h2>
 				<div style="padding-left: 65px;">
-					<img class="socialLink" src="images/fbIcon.png" />
-					<img class="socialLink" src="images/twitterIcon.png" />
-					<img class="socialLink" src="images/linkinIcon.png" />
-					<img class="socialLink" src="images/icons.png" />
+					<a href="http://www.facebook.com/GossipGlamour"><img class="socialLink" src="images/fbIcon.png" /></a>
+					<a href="http://www.twitter.com/gossipglamour"><img class="socialLink" src="images/twitterIcon.png" /></a>
+					<!-- <img class="socialLink" src="images/linkinIcon.png" /> -->
+					<a href="https://plus.google.com/100693275647465467088" rel="publisher"><img class="socialLink" src="images/icons.png" /></a>
 				</div>
 				<h2>AFFLIATED PAGES</h2>
 					<p id="affiliates">
-						<a href="http://www.sydneylovesfashion.com/">Sydney Loves Fashion</a><br/>
+						<a href="http://www.sydneylovesfashion.com/">Sydney Loves Fashion</a><br/><br/>
 						<a href="http://www.seattleboutiqueblogspot.com/">Seattle Boutique Blogspot</a>
 					</p>
-					<h2>OTHER FASHIONS SITES</h2>
+				<h2>OTHER FASHIONS SITES</h2>
+				<p id="affiliates">
+						<a href="http://www.style.com">Style.com</a><br/><br/>
+						<a href="http://www.wwd.com/">Women's Wear Daily</a><br/><br/>
+						<a href="http://www.fgi.org/">Fashion Group International</a><br/><br/>
+						<a href="http://nymag.com/thecut/">The Cut</a><br/><br/>
+						<a href="http://www.nytimes.com/pages/fashion/index.html">New York Times</a><br/><br/>
+						<a href="http://www.nrf.com/">National Retail Federation</a><br/><br/>
+						<a href="http://www.standard.co.uk/lifestyle/fashion/">London Evening Standard</a><br/>
+				</p>
 				<h2>GOSSIP&GLAMOUR TWITTER</h2>
 				<div id="feedWrapper">
 					<ul id="tweet_list"></ul>
@@ -62,13 +71,16 @@
 			
 			<div style="clear:both;"></div>
 			<div class="bottomNav">
-				<ul>
+				<ul style="z-index: 999;">
 					<li><a href="index.html">HOME</a> /</li>
 					<li> <a href="services.html">SERVICES</a> /</li>
 					<li> <a href="about.html">ABOUT</a> /</li>
-					<li> <a href="contact.html">CONTACT</a> /</li>
+					<li> <a href="contact.php">CONTACT</a> /</li>
 					<li> BLOG</li>
 				</ul>
+				<ul style="margin-top: -36px; padding-top: 15px; padding-bottom: 15px;">
+				</ul>
+				<br/><br/>
 			</div>
 		</div>
 		</div>
