--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
 				<ul style="margin-top: -4px;">
 				</ul>
 			</div>
-			<div class="mainNav">
+			<div class="mainNav" style-"width: 550px;">
 				<div id="feedWrapperBlog">
 					<ul id="post_list"></ul>
 				</div>
@@ -43,10 +43,10 @@
 			<div class="welcome">
 				<h2>CONNECT</h2>
 				<div style="padding-left: 65px;">
-					<a href="http://www.facebook.com/GossipGlamour"><img class="socialLink" src="images/fbIcon.png" /></a>
-					<a href="http://www.twitter.com/gossipglamour"><img class="socialLink" src="images/twitterIcon.png" /></a>
+					<a href="http://www.facebook.com/GossipGlamour"><img class="socialLink" src="images/fbIcon.png" border="0" /></a>
+					<a href="http://www.twitter.com/gossipglamour"><img class="socialLink" src="images/twitterIcon.png" border="0" /></a>
 					<!-- <img class="socialLink" src="images/linkinIcon.png" /> -->
-					<a href="https://plus.google.com/100693275647465467088" rel="publisher"><img class="socialLink" src="images/icons.png" /></a>
+					<a href="https://plus.google.com/100693275647465467088" rel="publisher"><img class="socialLink" src="images/icons.png" border="0" /></a>
 				</div>
 				<h2>AFFLIATED PAGES</h2>
 					<p id="affiliates">
@@ -64,8 +64,8 @@
 						<a href="http://www.standard.co.uk/lifestyle/fashion/">London Evening Standard</a><br/>
 				</p>
 				<h2>GOSSIP&GLAMOUR TWITTER</h2>
-				<div id="feedWrapper">
-					<ul id="tweet_list"></ul>
+				<div id="feedWrapper" style="position: relative; overflow: hidden;">
+					<ul id="tweet_list" style="position: relative; width: 320px; margin-left: 0px;"></ul>
 				</div>
 			</div>
 			
