--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 						<div id="servicesNavItem">
 							<a href="services.html"><img src="images/services.jpg" height="360" width="280" alt="" border="0"></a>
 							<div id="servicesFloat" class="floatTxt" style="left: 40px; top: 355px;">
-								Services<p id="servicesDetail" style="display:none;">A firm created exclusively<br/>for fashion industry clients</p>
+								Services<p id="servicesDetail" style="display:none;">A firm created exclusively<br/>for fashion industry clients.</p>
 							</div>
 						</div>
 						<div id="contactNavItem">
 							<a href="contact.php"><img src="images/contact.jpg" height="170" width="280" alt="" border="0"></a>
 							<div id="contactFloat" class="floatTxt" style="left: 40px; top: 550px;">
-								Contact<p id="contactDetail" style="display:none;">Here is some text<br/>and some more text</p>
+								Contact<p id="contactDetail" style="display:none;">Connect with G&amp;G<br/>via email.</p>
 							</div>
 						</div>
 					</div>
@@ -61,13 +61,13 @@
 						<div id="blogNavItem">
 							<a href="blog.html"><img src="images/blog.jpg" height="170" width="280" alt="" border="0"></a>
 							<div id="blogFloat" class="floatTxt" style="left: 357px; top: 165px;">
-								Blog<p id="blogDetail" style="display:none;">Here is some text<br/>Here is some text</p>
+								Blog<p id="blogDetail" style="display:none;">Want more news?<br/>find out more here.</p>
 							</div>
 						</div>
 						<div id="aboutNavItem">
 							<a href="about.html"><img src="images/about.jpg" height="360" width="280" alt="" id="aboutNavItem" border="0"></a>
 							<div id="aboutFloat" class="floatTxt" style="left: 357px; top: 550px;">
-								About<p id="aboutDetail" style="display:none;">Blurb goes here<br/>and also here</p>
+								About<p id="aboutDetail" style="display:none;">Learn more about<br/>Sydney here.</p>
 							</div>
 						</div>
 					</div>
