--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
 				<img src="images/logo.png" id="logo" style="position:relative;top:-170px;left:20px;display: none;" />
 			</div>
 		</div>
+		<div class="stud"></div>
 		<div id="main">
 		<div style="width: 1024px;">
 		<div class="wrapper">
@@ -40,32 +41,89 @@
 					<img src="images/about.jpg" alt="">
 				</div>
 				<div style="float: right; width: 600px;">
-					<h1>ABOUT SYDNEY CHAVEZ</h1>	
+					<h1>ABOUT SYDNEY MINTLE</h1>	
 					<p>
-						Founder, Sydney Chavez is a true fashion insider with links to many social circles 
-and community organizations in Seattle. Having spent over a decade working (and 
-playing) in the fashion industry Sydney has her finger on the pulse of the style scene 
-in the city. Her experience includes retail store management, training and development, visual merchandising, wardrobe styling, fashion show production for shows 
-including Fashion First and Project Red Dress, plus and over six years serving as 
-the Sourcing & Production Manager for the private label lines at Zumiez Inc. Sydney 
-holds an Associate of Applied Arts and Bachelors of Science Degree in Fashion Merchandising & Retail Management and has worked for many fashion related companies including Benefit Cosmetics, HMS Host, Nordstrom, Fashion First, Juxtapose, 
-and Styled.Seattle. Sydney currently holds the Regional Director position for 
-Seattle’s chapter of Fashion Group International and serves as the Managing 
-Partner for CRAVE Seattle. When she’s not working, Sydney enjoys indulgent trips 
-to the spa, traveling, shopping, and hanging out with her family and friends on 
-Queen Anne
+						Sydney Mintle is a fashion marketing specialist with industry experience in retail, apparel
+manufacturing, social media marketing and event production. She started her career
+in fashion working on the sales floor of a retail store and was later promoted to store
+manager. Her experience includes five years of fashion show production for Seattle's
+Fashion First runway show, which later led to the launch of her style blogs, Seattle
+Boutique Blogspot and Sydney Loves Fashion. After pursuing two degrees in Fashion
+Marketing, Sydney went on to explore the corporate side of the fashion industry and
+spent six years managing the sourcing and production process of numerous private label
+lines at Zumiez Inc. Her work has taken her all over the world including New York,
+London, Paris China, Vietnam and Hong Kong. Sydney is well-versed on industry trends
+and is deeply committed to helping clients achieve maximum results on new projects and
+initiatives.
+<br/><br/>
+Sydney’s non-profit work includes being actively involved in Seattle’s Chapter of
+Fashion Group International where she served on the Board of Directors for three
+consecutive years, including one as Regional Director. Her vision and experience helped
+get the group back to the business of fashion and evolve into Seattle’s premier fashion
+industry authority. Additional non-profit work includes event marketing for the annual
+Save the Girls Runway Fashion show and PR work for Fashion Camp by Rosaline
+Hampton.
 					</p>
 				</div>
 				<div style="clear:both;"></div>
 				<div>
 					<H1>ABOUT GOSSIP & GLAMOUR</H1>
 					<p>
-						Gossip & Glamour is a marketing and public relations firm for fashion industry clients in Seattle, Washington. Specializing in work 
-with designers, boutiques, retailers and manufacturers, Gossip & Glamour can help companies reach their productivity goals when
-it comes to marketing and PR. Gossip & Glamour also works with clients on sourcing, production, manufacturing and wholesale 
-projects offering experience and industry know-how to get the job done right. With a successful track record building solid relationships with clients and delivering results Gossip & Glamour is a trusted resource that is highly recommended by fashion industry 
-peers. Contact Gossip & Glamour at sydney@gossip-glamour.com. For the latest fashion news and events, follow us on 
-Twitter @GossipGlamour and LIKE us on Facebook
+						Launched in 2010, Gossip & Glamour is a fashion marketing and project management
+firm based in Seattle, Washington. Specializing in work with designers, boutiques,
+retailers and manufacturers, Gossip & Glamour helps companies reach their productivity
+goals when it comes to marketing, special events, social media and fashion initiatives.
+With a successful track record building solid relationships and delivering results, Gossip
+& Glamour is a trusted resource in the fashion industry.
+					</p>
+					<h1>TESTAMONIALS</h1>
+					<p class="quote">
+						"I cannot say enough about Sydney - both as a person and as a talented business woman.
+Sydney and I have worked together on multiple projects from Fashion First to Fashion
+Group International and each time her professionalism and knowledge shine through.
+I have hired her to build marketing plans and social media strategies for many of my
+events and they have all been executed with great success.   Sydney is simply the best at
+what she does."</p>
+<p class="auth">- Audrey Clark, Little Black Dress Events & Productions</p>
+<p class="quote">
+"Sydney helped us put some controls in place for our development/production process
+and build some procedures to help grow the company. At the same time she helped me
+directly with filling an open position for Project Manager. Sydney has great experience
+and is full of valuable input."</p>
+<p class="auth">- Dustin Winegardner, ITC Accessories</p>
+<p class="quote">
+"Sydney's leadership skills are evidenced by her effective and diplomatic rebuilding of
+the Seattle Chapter of Fashion Group International while serving as Regional Director.
+She energized the group, refocused its purpose and added members to a chapter that
+had dwindled in numbers and purpose during the recent economic downturn.  Through
+Fashion Group International, Sydney has met and connected with Fashion Executives in
+major US cities including New York, Los Angeles, Seoul, London and Paris."</p>
+<p class="auth">- Pat Nugent, Patricia Nugent Textiles</p>
+<p class="quote">
+"Sydney is a pleasure to work with. It is amazing how many projects she can work on at
+one time, without diluting her efforts in any one area. Her ability to multi-task and her
+exceptional people skills make her a force to be reckoned with!"</p>
+<p class="auth">- Sarah Peak, Zumiez</p>
+<p class="quote">
+"Sydney has been a fantastic coach for our store when it comes to social media. She
+worked with one of my employees to create a strategy for Facebook, Twitter and
+Pinterest and is completely knowledgeable in all of these areas. I've learned a lot from
+her in the process. As a result of working with Sydney, our Facebook traffic has grown
+by leaps and bounds. Many people tell us that it’s one of the best fan pages in retail.
+(I have to say-I think so too!) I wish I could have her on board every week to take
+over all of our social media projects. When I read her blog, I am just amazed at how
+knowledgeable and great she is at this. I would highly recommend Sydney for any social
+media projects or initiatives you may have. Doing this type of marketing has definitely
+increased our store visibility."</p>
+<p class="auth">- Karan Dannenberg, Karan Dannenberg Clothier</p>
+
+<p class="quote">"If you need something done, Sydney is your go-to girl! I've worked with Sydney on
+several projects and each time has been an absolute pleasure. She not only makes things
+happen, but she's also extremely passionate about what she does. I was honored to have
+her be part of Fashion Camp by Rosaline Hampton and she went above and beyond all
+my expectations. Fashion Camp wouldn't have been the same without her efforts. You
+can always look forward to great ideas and amazing work when Sydney is involved!"</p>
+<p class="auth">- Rosaline Hampton</p>
 					</p>
 				</div>
 			</div>
