--- a/services.html
+++ b/services.html
@@ -17,6 +17,7 @@
 				<img src="images/logo.png" id="logo" style="position:relative;top:-170px;left:20px;display: none;" />
 			</div>
 		</div>
+		<div class="stud"></div>
 		<div id="main">
 		<div style="width: 1024px;">
 		<div class="wrapper">
