--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,7 @@
 				<img src="images/logo.png" id="logo" style="position:relative;top:-170px;left:20px;display: none;" />
 			</div>
 		</div>
+		<div class="stud"></div>
 		<div id="main">
 		<div style="width: 1024px;">
 		<div class="wrapper">
@@ -45,7 +46,7 @@
 				<div style="padding-left: 65px;">
 					<a href="http://www.facebook.com/GossipGlamour"><img class="socialLink" src="images/fbIcon.png" border="0" /></a>
 					<a href="http://www.twitter.com/gossipglamour"><img class="socialLink" src="images/twitterIcon.png" border="0" /></a>
-					<!-- <img class="socialLink" src="images/linkinIcon.png" /> -->
+					<a href="http://www.pinterest.com/sydlovesfashion"><img class="socialLink" src="images/pinIcon.png" border="0" /></a>
 					<a href="https://plus.google.com/100693275647465467088" rel="publisher"><img class="socialLink" src="images/icons.png" border="0" /></a>
 				</div>
 				<h2>AFFLIATED PAGES</h2>
