--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 	<![endif]-->
 </head>
 <body>
-		<div style="width: 100%;background-color: #000;margin: 0px;padding:0px;">
-			<div class="header">
-				<img id="tpBanner" src="" onload="$('#logo').show();"/>
-				<!-- this will be a rotating image -->
-				<img src="images/logo.png" id="logo" style="position:relative;top:-170px;left:20px;display: none;" />
-			</div>
+	<div style="width: 100%;background-color: #000;margin: 0px;padding:0px;background-image: url(">
+		<div class="header">
+			<img id="tpBanner" src="" onload="$('#logo').show();"/>
+			<!-- this will be a rotating image -->
+			<img src="images/logo.png" id="logo" style="position:relative;top:-170px;left:20px;display: none;" />
 		</div>
-		<div id="main">
+	</div>
+	<div class="stud"></div>
+	<div id="main">
 		<div style="width: 1024px;">
 			<div class="wrapper">
 				<div class="nav">
@@ -94,7 +95,7 @@
 					<div style="padding-left: 65px;">
 						<a href="http://www.facebook.com/GossipGlamour"><img class="socialLink" src="images/fbIcon.png" border="0" /></a>
 						<a href="http://www.twitter.com/gossipglamour"><img class="socialLink" src="images/twitterIcon.png" border="0" /></a>
-						<!-- <img class="socialLink" src="images/linkinIcon.png" /> -->
+						<a href="http://www.pinterest.com/sydlovesfashion"><img class="socialLink" src="images/pinIcon.png" border="0" /></a>
 						<a href="https://plus.google.com/100693275647465467088" rel="publisher"><img class="socialLink" src="images/icons.png" border="0" /></a>
 					</div>
 					<h2>AFFLIATED PAGES</h2>
