--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 					<img src="images/about.jpg" alt="">
 				</div>
 				<div style="float: right; width: 600px;">
-					<h1>ABOUT SYDNEY MINTLE</h1>	
+					<h1>ABOUT THE FOUNDER</h1>	
 					<p>
 						Sydney Mintle is a fashion marketing specialist with industry experience in retail, apparel
 manufacturing, social media marketing and event production. She started her career
@@ -68,7 +68,7 @@ Hampton.
 				<div style="clear:both;"></div>
 				<div>
 					<H1>ABOUT GOSSIP & GLAMOUR</H1>
-					<p>
+					<p style="margin-bottom: 40px;">
 						Launched in 2010, Gossip & Glamour is a fashion marketing and project management
 firm based in Seattle, Washington. Specializing in work with designers, boutiques,
 retailers and manufacturers, Gossip & Glamour helps companies reach their productivity
@@ -76,7 +76,8 @@ goals when it comes to marketing, special events, social media and fashion initi
 With a successful track record building solid relationships and delivering results, Gossip
 & Glamour is a trusted resource in the fashion industry.
 					</p>
-					<h1>TESTAMONIALS</h1>
+					
+					<h1>TESTIMONIALS</h1>
 					<p class="quote">
 						"I cannot say enough about Sydney - both as a person and as a talented business woman.
 Sydney and I have worked together on multiple projects from Fashion First to Fashion
