--- a/index.html
+++ b/index.html
@@ -76,20 +76,7 @@
 				<div class="welcome">
 					<h1>WELCOME</h1>
 					<p>
-						Welcome to Gossip &amp; Glamour Marketing 
-								and Public Relations, a firm created 
-								exclusively for fashion industry clients. 
-								We offer a wide variety of services that 
-								cater to every segment of the fashion 
-								world including retail, wholesale 
-								and manufacturing. Gossip &amp; Glamour is 
-								committed to creating long-term partner-
-								ships with clients by striving to be a viable 
-								fashion resource for companies of any size. 
-								Think of us as your "secret weapon" 
-								armed with the experience you need to 
-								successfully navigate the fashion industry 
-								with style and grace.
+						Welcome to Gossip &amp; Glamour, a marketing and project management firm created exclusively for fashion industry clients. We offer unique services that specifically meet the needs of the industry from the retail floor to the corporate office. Gossip &amp; Glamour is committed to creating long-term partnerships with clients by striving to be a viable fashion resource for companies of any size. 
 					</p>
 					<h2>CONNECT</h2>
 					<div style="padding-left: 65px;">
