--- a/services.html
+++ b/services.html
@@ -100,8 +100,8 @@
 					</div>
 					<div style="border-bottom: 1px solid #EEE;"></div>
 					<p style="margin-top: 10px;">
-					*Pricing is project-based and also available on an hourly basis. <br/>
-					*Initial consult fee $150. (Waived if a business agreement is reached).
+					*Pricing is project-specific or subject to an hourly rate of $45. <br/>
+					*Phone consultations are free. In-person consultations are subject to a fee. 
 				</p>
 				</div>
 				<div style="clear:both;"></div>
