--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
 				<ul style="margin-top: -4px;">
 				</ul>
 			</div>
-			<div class="mainNav" style-"width: 550px;">
+			<div class="mainNav" style="width: 550px; border: 0px;">
 				<div id="feedWrapperBlog">
 					<ul id="post_list"></ul>
 				</div>
