--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<ul style="margin-top: -4px;">
 					</ul>
 				</div>
-				<div class="mainNav">
+				<div class="mainNav" style="border-bottom: 1px solid #000;">
 					<div style="float:left; width: 285px;">
 						<div id="servicesNavItem">
 							<a href="services.html"><img src="images/services.jpg" height="360" width="280" alt="" border="0"></a>
@@ -72,6 +72,7 @@
 							</div>
 						</div>
 					</div>
+					<div style="border-bottom: 1px solid #000;position:relative;top:592px;width:600px;"></div>
 				</div>
 				<div class="welcome">
 					<h1>WELCOME</h1>
