--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
 				<ul style="margin-top: -4px;">
 				</ul>
 			</div>
-			<div class="servicesContent" style="padding-bottom: 15px; border-bottom: 1px solid #EEE;">
+			<div class="servicesContent" style="padding-bottom: 15px;">
 				<div class="profilePic">
 					<div class="floatTxt">
 						<a href="#FM">Fashion Marketing</a>
@@ -98,7 +98,7 @@
 							<p>Training Manuals</p>
 							<p>Industry-specific articles</p>
 					</div>
-					<div style="border-bottom: 1px solid #EEE;"></div>
+					<div style="border-bottom: 1px solid #000;"></div>
 					<p style="margin-top: 10px;">
 					*Pricing is project-specific or subject to an hourly rate of $45. <br/>
 					*Phone consultations are free. In-person consultations are subject to a fee. 
